1.5.8  NEW: dms-fix-mass for fixing inconsitent masses.
       NEW: dms-find-knot for finding bonds passing through rings.
       NEW: dms-validate runs the knot check.

1.5.7  FIXED: dms-alchemical was confused by extra properties in the B state.

1.5.6  FIXED: Memory leak in setPositions and setVelocities.
       
1.5.5  NEW: {get,set}Positions is ~100x faster due to NumPy integration.
       NEW: {get,set}Velocities is ~500x faster due to NumPy integration. 
       NEW: System.center and Residue.center use NumPy.
       NEW: Low-level SystemPtr positions and velocities accessors take
            optional ids argument to get/set values for specified atoms.
       NEW: C++ interface for TermTable provides iterator for efficiency.

1.5.4  FIXED: SaveMAE reports error on failure.
       NEW: SaveMAE and SaveDMS print errno information on failure.

1.5.3  FIXED: Support SC{EE,NB}_SCALE_FACTOR in Amber PrmTop importer.

1.5.2  FIXED: System.setCell() converts its input to the correct type.

1.5.1  FIXED: dms-frame reads in double precision if possible.
       FIXED: Better error messages when accessing nonexistent Term properties.
       NEW: Added getPositions(), getVelocities(), and getCell() to System.

1.5.0  REMOVED: dms-neutralize, dms-solvate
       REMOVED: Undocumented "builder" module.
       FIXED: Documentation for dms-override-vdw, dms-scale-vdw
       NEW: dms-frame tool for extracting coordinates and doing periodic fix.
       NEW: C++ interface for guessing file type.

1.4.8  NEW dms-frame script for frame extraction with centering and wrapping.

1.4.7  NEW: ParamTable::find and TermTable::find{WithAny,WithAll,Exact}.
       NEW: msys.SavePDB.
       NEW: better logging in dms-override-vdw and dms-scale-vdw.
       FIXED: reading of alchemical dms files.
       FIXED: LoadPDB now uses correct chain/segid logic.
       FIXED: dms-dump prints nonbonded_combined information.

1.4.6  Portability (build without C++0x, and on OS X).
